--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.application.name=booking
+application.version=1.0.0
+server.port=5000
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:booking
@@ -5,3 +8,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=booking
 spring.datasource.password=booking
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.banner.location=classpath:/banner.txt
